Add section for ripping CDs

--- a/programming/arch-setup.org
+++ b/programming/arch-setup.org
@@ -748,6 +748,9 @@ To skip prompt add =-N= (dont do that)
 5. Press C-x s to save buffers. (You can then press y, n or ! to save all at once)
 
 
+** Rip CDs
+https://www.reddit.com/r/commandline/comments/d40cst/looking_for_cd_ripper_software/
+
 * Current List of Installed Packages
 alsa-utils
 android-tools
